@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="ktorrent" version="15">
+<kpartgui name="ktorrent" version="16">
 <MenuBar>
   <Menu name="file"><text>&amp;File</text>
 	  <Action name="file_new"/>
@@ -55,6 +55,7 @@
 	</Menu>
 	<Separator/>
 	<Action name="view_rename_torrent" />
+	<Action name="view_export_torrent" />
 	<Action name="view_announce" />
 	<Action name="view_preview" />
 	<Separator/>
